# youtube_downloader_api

./: .env  beginner_learnings.md  db.sqlite3  pyproject.toml  pyrightconfig.json  requirements.txt
migrations/models/: 0_20251217192933_init.py  0_20251218173906_init.py  1_20251217210712_google.py  1_20251218174117_made-email-unique.py  2_20251217213944_user-model.py  2_20251218214159_add-playlist.py
src/: main.py  models.py  pyproject.toml  settings.py  utils.py
src/router/: playlist.py  user.py  video.py
